--- a/_static/css/local.css
+++ b/_static/css/local.css
@@ -3,6 +3,9 @@
     margin-bottom: 0;
 }
 
+div.navbar-header a:visited, ul.navbar-nav a:visited, div.sidebar h3 a {
+    color: #777 !important;
+}
 
 button.navbar-toggle {
     z-index: 1000;
@@ -37,6 +40,10 @@ div.sidebar h3 {
     font-size: 20px;
 }
 
+div.body {
+    min-width: inherit; /* override sphinx basic.css */
+}
+
 div.body h1 {
     border-bottom: 1px solid rgb(208, 208, 208);
     padding-bottom: 10px;
@@ -59,6 +66,13 @@ div.body a {
 #sidebar-wrapper.affix-bottom, #sidebar-wrapper.affix {
     margin-top: -52px; /* magic */
 }
+
+div.sidebar:first-of-type li {
+    /* hanging indent */
+    padding-left: 8px;
+    text-indent: -8px;
+}
+
 
 #navbar-related {
     border: 0;
@@ -90,6 +104,38 @@ footer {
     margin-top: -1px;
 }
 
+ul.simple {
+    margin-bottom:10px;
+}
+
+span.pre {
+    word-wrap: break-word;
+}
+
+@media print {
+    .affix,
+    #sidebar-wrapper.affix-bottom,
+    #sidebar-wrapper.affix-top {
+        position: inherit !important;
+        margin-top: 0 !important;
+    }
+    #content-wrapper {
+        left: 0 !important;
+        margin-left: 0 !important;
+        width: 100% !important;
+        clear: both !important;
+        border: 0 !important;
+        overflow-y: visible !important;
+    }
+
+    a {
+        text-decoration: underline !important;
+    }
+
+    a[href]::after {
+        opacity: 0.5;
+    }
+}
 
 #sidebar-wrapper a.youarehere,
 #navbar-top a.youarehere {
