--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -48,7 +48,8 @@ div.body h1 {
     padding-bottom: 10px;
 }
 
-div.body a {
+div.body a,
+div.body p {
     word-wrap: break-word;
 }
 
@@ -109,6 +110,12 @@ ul.simple {
 
 span.pre {
     word-wrap: break-word;
+}
+
+table.docutils caption {
+    padding: 8px;
+    font-weight: bold;
+    font-size: 1.1em;
 }
 
 @media print {
