--- a/_static/css/local.css
+++ b/_static/css/local.css
@@ -177,16 +177,24 @@ div.shortenText {
     }
 }
 
+li.youarehere {
+    list-style-type: "➡ "
+    /* text-decoration: underline; */
+}
+
 #sidebar-wrapper a.youarehere,
 #navbar-top a.youarehere {
     font-size: 1.2em;
     font-weight: bold;
-    /* text-decoration: underline; */
+    margin-left: -1px;
 }
 
-#sidebar-wrapper a.youarehere:after,
 #navbar-top a.youarehere:after {
     content: " ⬅" !important;
+}
+
+#sidebar-wrapper li.youarehere {
+    list-style-type: "➡ ";
 }
 
 #content-wrapper a.headerlink {
